Fix: expenses too long on small screens

--- a/src/components/Expense.css
+++ b/src/components/Expense.css
@@ -12,3 +12,28 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (max-width: 800px) {
+  .list-item--expense {
+    grid-template-columns: 3fr auto 5rem;
+    grid-template-rows: auto auto;
+    row-gap: 0.3rem;
+  }
+  .expense__datafield {
+    margin-bottom: 0;
+    margin-top: 0.75rem;
+  }
+  .expense__datafield:nth-of-type(3),
+  .expense__datafield:nth-of-type(4) {
+    margin-top: 0;
+    margin-bottom: 0.75rem;
+  }
+  .expense__buttonfield {
+    grid-row: 1 / span 2;
+    grid-column: 3;
+    
+  }
+  .button-icon {
+    display: inline-block;
+  }
+}
